<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:background="@drawable/back_design_spotring_new"
    tools:context=".user_auth.UserRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/design_4"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/registration"
            android:textColor="@color/belize_hole"
            android:textSize="@dimen/_17sdp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_8sdp">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:indeterminate="true"
            android:layout_gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/registration_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_registration_lay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:hint="@string/hint_name"
                    android:textColorHint="#b2bec3"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeColor="@color/midnight_blue"
                    app:boxStrokeWidth="@dimen/_2sdp"
                    app:helperText=""
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:helperTextTextAppearance="@style/CustomTextFont"
                    app:hintTextAppearance="@style/CustomTextFont"
                    app:helperTextEnabled="true"
                    app:hintTextColor="#b2bec3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/carter_one"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:text=""
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_email_registration_lay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:hint="@string/hint_mail"
                    android:textColorHint="#b2bec3"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeColor="@color/midnight_blue"
                    app:boxStrokeWidth="@dimen/_2sdp"
                    app:helperText=""
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:helperTextTextAppearance="@style/CustomTextFont"
                    app:hintTextAppearance="@style/CustomTextFont"
                    app:helperTextEnabled="true"
                    app:hintTextColor="#b2bec3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_email_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/carter_one"
                        android:inputType="textEmailAddress"
                        android:text=""
                        android:imeOptions="actionNext"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_phone_registration_lay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:hint="@string/hint_phone"
                    android:textColorHint="#b2bec3"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeColor="@color/midnight_blue"
                    app:boxStrokeWidth="@dimen/_2sdp"
                    app:helperText=""
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:helperTextTextAppearance="@style/CustomTextFont"
                    app:hintTextAppearance="@style/CustomTextFont"
                    app:helperTextEnabled="true"
                    app:hintTextColor="#b2bec3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_phone_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/carter_one"
                        android:inputType="phone"
                        android:text=""
                        android:imeOptions="actionNext"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_password_registration_lay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:hint="@string/hint_password"
                    android:textColorHint="#b2bec3"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeColor="@color/midnight_blue"
                    app:boxStrokeWidth="@dimen/_2sdp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#636e72"
                    app:helperText=""
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:helperTextTextAppearance="@style/CustomTextFont"
                    app:hintTextAppearance="@style/CustomTextFont"
                    app:helperTextEnabled="true"
                    app:hintTextColor="#b2bec3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_password_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:fontFamily="@font/carter_one"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_confirm_password_registration_lay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:hint="@string/hint_confirm_password"
                    android:textColorHint="#b2bec3"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeColor="@color/midnight_blue"
                    app:boxStrokeWidth="@dimen/_2sdp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#636e72"
                    app:helperText=""
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:helperTextTextAppearance="@style/CustomTextFont"
                    app:hintTextAppearance="@style/CustomTextFont"
                    app:helperTextEnabled="true"
                    app:hintTextColor="#b2bec3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_confirm_password_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:fontFamily="@font/carter_one"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registration_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/carter_one"
                    android:text="@string/button_register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/move_to_login_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="LOGIN"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:fontFamily="@font/carter_one"
                    android:textColor="@color/belize_hole"
                    android:textSize="@dimen/_14sdp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </ScrollView>


    </androidx.cardview.widget.CardView>

</LinearLayout>