<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/belize_hole"
        android:padding="@dimen/_12sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="0dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/close_pass_screen"
            android:fontFamily="@font/poppins_bold"
            android:text="SET PASSWORD"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/close_pass_screen"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/close_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_4sdp"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please set your password to save your profile and login to the app"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_password_google_login_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/hint_password"
        android:textColorHint="#b2bec3"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxStrokeColor="@color/midnight_blue"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:endIconMode="password_toggle"
        app:endIconTint="#636e72"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:helperTextTextAppearance="@style/CustomTextFont"
        app:hintTextAppearance="@style/CustomTextFont"
        app:helperTextEnabled="true"
        app:hintTextColor="#b2bec3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:fontFamily="@font/carter_one"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_confirm_password_google_login_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:hint="@string/hint_confirm_password"
        android:textColorHint="#b2bec3"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxStrokeColor="@color/midnight_blue"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:endIconMode="password_toggle"
        app:endIconTint="#636e72"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:helperTextTextAppearance="@style/CustomTextFont"
        app:hintTextAppearance="@style/CustomTextFont"
        app:helperTextEnabled="true"
        app:hintTextColor="#b2bec3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_confirm_password_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:fontFamily="@font/carter_one"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/carter_one"
        android:text="@string/button_save_login"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:backgroundTint="@null" />

</LinearLayout>